--- a/themes/admin/templates/page-details.html.twig
+++ b/themes/admin/templates/page-details.html.twig
@@ -3,7 +3,7 @@
     <h1>
         <i class="fa fa-fw fa-line-chart"></i>
         Page Details:
-                
+
         {{ grav.uri.query('page') }}
     </h1>
 {% endblock %}
@@ -96,132 +96,136 @@
                             <tr>
                                 <td>
                                     <img src="https://flagcdn.com/24x18/{{ s.country|lower }}.png">
-                                        {{ s.country }}
-                                    </td>
-                                    <td>
-                                        {{ s.share }}
-                                        %
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_top_browsers %}
-                    <div class="mb-5 col-{{ conf.cols_top_browsers }}">
-                        <h5>
-                            Top Browsers
-                        </h5>
-                        <table class="table">
-                            <tr>
-                                <th>
-                                    Browser
-                                </th>
-                                <th>
-                                    % share
-                                </th>
-                                <th>
-                                    Page Views
-                                </th>
+                                    {{ s.country|default('Unknown') }}
+                                </td>
+                                <td>
+                                    {{ s.share }}
+                                    %
+                                </td>
+                                <td>
+                                    {{ s.hits }}
+                                </td>
                             </tr>
-                            {% for s in stats.topBrowsers(conf.limit_top_browsers,null,null, {'route' : grav.uri.query('page')}) %}
-                                <tr>
-                                    <td>
-                                        {{ s.browser }}
-                                    </td>
-                                    <td>
-                                        {{ s.share }}
-                                        %
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-                {% if conf.show_top_platforms %}
-                    <div class="mb-5 col-{{ conf.cols_top_platforms }}">
-                        <h5>
-                            Top Platforms
-                        </h5>
-                        <table class="table">
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
+            {% if conf.show_top_browsers %}
+                <div class="mb-5 col-{{ conf.cols_top_browsers }}">
+                    <h5>
+                        Top Browsers
+                    </h5>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Browser
+                            </th>
+                            <th>
+                                % share
+                            </th>
+                            <th>
+                                Page Views
+                            </th>
+                        </tr>
+                        {% for s in stats.topBrowsers(conf.limit_top_browsers,null,null, {'route' : grav.uri.query('page')}) %}
                             <tr>
-                                <th>
-                                    Platform
-                                </th>
-                                <th>
-                                    % share
-                                </th>
-                                <th>
-                                    Page Views
-                                </th>
+                                <td>
+                                    {{ s.browser }}
+                                </td>
+                                <td>
+                                    {{ s.share }}
+                                    %
+                                </td>
+                                <td>
+                                    {{ s.hits }}
+                                </td>
                             </tr>
-                            {% for s in stats.topPlatforms(conf.limit_top_platforms,null,null, {'route' : grav.uri.query('page')}) %}
-                                <tr>
-                                    <td>
-                                        {{ s.platform }}
-                                    </td>
-                                    <td>
-                                        {{ s.share }}
-                                        %
-                                    </td>
-                                    <td>
-                                        {{ s.hits }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
+            {% if conf.show_top_platforms %}
+                <div class="mb-5 col-{{ conf.cols_top_platforms }}">
+                    <h5>
+                        Top Platforms
+                    </h5>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Platform
+                            </th>
+                            <th>
+                                % share
+                            </th>
+                            <th>
+                                Page Views
+                            </th>
+                        </tr>
+                        {% for s in stats.topPlatforms(conf.limit_top_platforms,null,null, {'route' : grav.uri.query('page')}) %}
+                            <tr>
+                                <td>
+                                    {{ s.platform }}
+                                </td>
+                                <td>
+                                    {{ s.share }}
+                                    %
+                                </td>
+                                <td>
+                                    {{ s.hits }}
+                                </td>
+                            </tr>
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
 
-                {% if conf.show_pagedetails_recent_views %}
-                    <div class="mb-5 col-{{ conf.cols_pagedetails_recent_views }}">
-                        <h5>
-                            Recent Views
-                        </h5>
-                        <table class="table">
+            {% if conf.show_pagedetails_recent_views %}
+                <div class="mb-5 col-{{ conf.cols_pagedetails_recent_views }}">
+                    <h5>
+                        Recent Views
+                    </h5>
+                    <table class="table">
+                        <tr>
+                            <th>
+                                Date
+                            </th>
+                            <th>
+                                User
+                            </th>
+                            <th>Location</th>
+                            <th>
+                                Platform
+                            </th>
+                            <th>
+                                Browser
+                            </th>
+                        </tr>
+                        {% for s in stats.recentPages(conf.limit_pagedetails_recent_views,null,null, {'route' : grav.uri.query('page')}) %}
                             <tr>
-                                <th>
-                                    Date
-                                </th>
-                                <th>
-                                    User
-                                </th>
-                                <th>
-                                    Platform
-                                </th>
-                                <th>
-                                    Browser
-                                </th>
+                                <td>
+                                    {{ s.date|date }}
+                                </td>
+                                <td>
+                                    {{ s.user|default(s.ip) }}
+                                </td>
+                                <td>
+                                    {{ s.city }}
+                                    -
+                                    {{ s.country }}
+                                </td>
+                                <td>
+                                    {{ s.platform }}
+                                </td>
+                                <td>
+                                    {{ s.browser }}
+                                </td>
                             </tr>
-                            {% for s in stats.recentPages(conf.limit_pagedetails_recent_views,null,null, {'route' : grav.uri.query('page')}) %}
-                                <tr>
-                                    <td>
-                                        {{ s.date|date }}
-                                    </td>
-                                    <td>
-                                        {{ s.user|default(s.ip) }}
-                                    </td>
-                                    <td>
-                                        {{ s.platform }}
-                                    </td>
-                                    <td>
-                                        {{ s.browser }}
-                                    </td>
-                                </tr>
-                            {% endfor %}
-                        </table>
-                    </div>
-                {% endif %}
-            </div>
+                        {% endfor %}
+                    </table>
+                </div>
+            {% endif %}
         </div>
-        {% set siteStats = stats.siteSummary(null,null, {'route' : grav.uri.query('page')}) %}
-        <script>{% include 'partials/charts.html.twig' %}
-        </script> 
-    {% endblock %}
-    
+    </div>
+    {% set siteStats = stats.siteSummary(null,null, {'route' : grav.uri.query('page')}) %}
+    <script>{% include 'partials/charts.html.twig' %}</script>
+{% endblock %}
