feat: User Details Page

--- a/themes/admin/templates/stats.html.twig
+++ b/themes/admin/templates/stats.html.twig
@@ -18,15 +18,15 @@
         <div class="button-group">
             <p>
                 Using:
-                                                
-                                
+
+
                 {{ stats.dbStats.path }}
                 (
-                                
+
                 {{ stats.dbStats.mb }}
                 MB)
-                                            
-                            
+
+
             </p>
         </div>
     </div>
@@ -34,8 +34,8 @@
         <h1>
             <i class="fa fa-fw fa-line-chart"></i>
             Page Stats
-                            
-                    
+
+
         </h1>
     {% endblock %}
 {% endblock %}
@@ -48,7 +48,7 @@
                 <div class="mb-5 col-{{ conf.cols_page_views_widget }}">
                     <h5>
                         Page Views
-                                            
+
                     </h5>
                     <div style="width: w-100">
                         <canvas id="chart_hits"></canvas>
@@ -59,7 +59,7 @@
                 <div class="mb-5 col-{{ conf.cols_unique_visitors_widget }}">
                     <h5>
                         Unique Visitors
-                                            
+
                     </h5>
                     <div style="width: w-100">
                         <canvas id="chart_ips"></canvas>
@@ -70,7 +70,7 @@
                 <div class="mb-5 col-{{ conf.cols_unique_users_widget }}">
                     <h5>
                         Unique Users
-                                            
+
                     </h5>
                     <div style="width: w-100">
                         <canvas id="chart_users"></canvas>
@@ -81,22 +81,25 @@
                 <div class="mb-5 col-{{ conf.cols_top_users_widget }}">
                     <h5>
                         Top Users
-                                            
+
                     </h5>
                     <table class="table">
                         <tr>
                             <th>
                                 User
-                                                            
+
                             </th>
                             <th>
                                 Page Views
-                                                            
+
                             </th>
                         </tr>
                         {% for s in stats.topUsers(conf.limit_top_users_widget) %}
                             <tr>
                                 <td>
+                                        <a class="me-2"  href="user-details?user={{ s.user|default(s.ip) }}" title="view information about {{ s.user|default(s.ip) }}">
+                                            <i class="fa fa-fw fa-line-chart"></i>
+                                        </a>
                                     {{ s.user|default('not logged in') }}
                                 </td>
                                 <td>
@@ -111,17 +114,17 @@
                 <div class="mb-5 col-{{ conf.cols_top_countries }}">
                     <h5>
                         Top Countries
-                                            
+
                     </h5>
                     <table class="table">
                         <tr>
                             <th>
                                 Country
-                                                            
+
                             </th>
                             <th>
                                 Page Views
-                                                            
+
                             </th>
                         </tr>
                         {% for s in stats.topCountries(conf.limit_top_countries) %}
@@ -142,21 +145,21 @@
                     <div class="mb-5 col-{{ conf.cols_top_browsers }}">
                         <h5>
                             Top Browsers
-                                                    
+
                         </h5>
                         <table class="table">
                             <tr>
                                 <th>
                                     Browser
-                                                                    
+
                                 </th>
                                 <th>
                                     % share
-                                                                    
+
                                 </th>
                                 <th>
                                     Page Views
-                                                                    
+
                                 </th>
                             </tr>
                             {% for s in stats.topBrowsers(conf.limit_top_browsers) %}
@@ -167,7 +170,7 @@
                                     <td>
                                         {{ s.share }}
                                         %
-                                                                            
+
                                     </td>
                                     <td>
                                         {{ s.hits }}
@@ -181,21 +184,21 @@
                     <div class="mb-5 col-{{ conf.cols_top_platforms }}">
                         <h5>
                             Top Platforms
-                                                    
+
                         </h5>
                         <table class="table">
                             <tr>
                                 <th>
                                     Platform
-                                                                    
+
                                 </th>
                                 <th>
                                     % share
-                                                                    
+
                                 </th>
                                 <th>
                                     Page Views
-                                                                    
+
                                 </th>
                             </tr>
                             {% for s in stats.topPlatforms(conf.limit_top_platforms) %}
@@ -206,7 +209,7 @@
                                     <td>
                                         {{ s.share }}
                                         %
-                                                                            
+
                                     </td>
                                     <td>
                                         {{ s.hits }}
@@ -220,33 +223,33 @@
                     <div class="col-{{ conf.cols_recently_viewed_pages }}">
                         <h5>
                             Recently Viewed Pages
-                                                    
+
                         </h5>
                         <table class="table">
                             <tr>
                                 <th>
                                     Date
-                                                                    
+
                                 </th>
                                 <th>
                                     Page
-                                                                    
+
                                 </th>
                                 <th>
                                     user
-                                                                    
+
                                 </th>
                                 <th>
                                     Location
-                                                                    
+
                                 </th>
                                 <th>
                                     Browser
-                                                                    
+
                                 </th>
                                 <th>
                                     Platform
-                                                                    
+
                                 </th>
                             {# <th>Views</th> #}
                             </tr>
@@ -265,13 +268,16 @@
                                         {{ s.page_title }}
                                     </td>
                                     <td>
+                                        <a class="me-2"  href="user-details?user={{ s.user|default(s.ip) }}" title="view information about {{ s.user|default(s.ip) }}">
+                                            <i class="fa fa-fw fa-line-chart"></i>
+                                        </a>
                                         {{ s.user|default(s.ip) }}
                                     </td>
                                     <td>
                                         {{ s.city }}
                                         -
-                                                                                                                        
-                                                                                    
+
+
                                         {{ s.country }}
                                     </td>
                                     {# <td>{{s.hits}}</td> #}
@@ -290,25 +296,25 @@
                     <div class="col-{{ conf.cols_top_pages }}">
                         <h5>
                             Most Viewed Pages
-                                                        
+
                         </h5>
                         <table class="table">
                             <tr>
                                 <th>
                                     Page
-                                                                        
+
                                 </th>
                                 <th>
                                     Views
-                                                                        
+
                                 </th>
                                 <th>
                                     Unique visitors
-                                                                        
+
                                 </th>
                                 <th>
                                     Unique logged in Users
-                                                                        
+
                                 </th>
                             </tr>
                             {% for s in stats.pagesSummary(conf.limit_top_pages_pages) %}
@@ -343,4 +349,3 @@
         {% include 'partials/charts.html.twig' %}
     </script>
     {% endblock %}
-    
