fix: display date only on user detail page

--- a/themes/admin/templates/user-details.html.twig
+++ b/themes/admin/templates/user-details.html.twig
@@ -187,7 +187,7 @@
 
                             <tr>
                                 <td colspan="5">
-                                    <strong>{{ day|date }}</strong>
+                                    <strong>{{ day|date('F jS') }}</strong>
                                 </td>
                             </tr>
                             {% for s in d %}
